fix: corregir configuración CORS para navegadores